-issue#5204: Compatibility improvements for Audit Database under PHP 8.x
-issue#5205: When using Diff Viewer, rendering is not always correct under certain themes
-issue#5207: Compatibility improvements for Installer under PHP 8.x
-issue#5208: Package form objects use the wrong text domain in their i18n strings
-issue#5211: Undefined variable $user_id when creating new graph
-issue#5232: On large systems statistics gathering at the beginning of a poller run lead to excessive polling times
-issue#5236: Edit Graph Template link missing base_url
-issue#5238: Searching for Poller Items Generates SQL Errors
-issue#5239: SNMP-Options - Bulk Walk Maximum Repetitions ignored
-issue#5243: Template Export missing Graph Template columns multiple and test_source

1.2.23
-security#4920: Add .htaccess file to scripts folder
-security#XXXX: CVE-2022-46169 Unauthenticated Command Injection in Remote Agent
-issue#4418: When using Single Signon Frameworks like SiteMinder Cacti does not properly detect ticket revocation in callbacks
-issue#4682: New templates are not installed during the update
-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4896: When remote poller is in offline mode GUI inaccesible and poller times out
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error