@@ -99,6 +99,7 @@ Cacti CHANGELOG
 -issue#5207: Compatibility improvements for Installer under PHP 8.x
 -issue#5208: Package form objects use the wrong text domain in their i18n strings
 -issue#5211: Undefined variable $user_id when creating new graph
+-issue#5214: Basic Auth is timing out and logging users off automatically
 -issue#5232: On large systems statistics gathering at the beginning of a poller run lead to excessive polling times
 -issue#5236: Edit Graph Template link missing base_url
 -issue#5238: Searching for Poller Items Generates SQL Errors
